# 23/07/2002 - T.o.M.E 2.0.0 aka "Point of No Return"

# bug.txt should follow the exact same format

# special tag to specify the current version
[V]  TomeNET 4.0.0 aka "The Gathering"

13/02/2003
[P]- Mimic AC & to-dam now averaged from player & form (similar to HP)
     I hope this will balance mimics well compared to the other classes.

12/02/2003
[O]- Admins can destroy/unequip anything
     Fixed COULD_2H encumberment penalty (now 2/3 for player-stat-based
     and for player-mastery-skill-based to-hit/to-dam boni. Penalty does
     not apply to the weapon's boni!)
[P]- Hopefully fixed mimic-sorc-adventurer's HP bug.
[D]- Features like TREE and SMALL_TREE now allow CAN_FLY and WILD_WOOD
     monsters to cross.

11/02/2003
[O]- Changed silly 'Amulet of ESP' to something more cooler and less ooc.
     (Amulets of Telepathic Awareness featuring insta-ego code and random ESP)
     CAN/MUST_2H displayed correctly on examining a weapon.

10/02/2003
[G]- Martial Arts give more abilities than just FA.

08/02/2003
[M]- Toned down boosts if monsters were 50+ levels ood.
     New algorithm for boosting.
     Reduced INDIRECT_SUMMONING_RADIUS from 3 to 2.
     Reduced radius for ball spells/breathes from 3/2 to 2/1 (smart/stupid mob).

30/01/2003
[I]- Fixed character dumps on windows

12/01/2003
[O]- Minor adjustments.

11/01/2003
[O]- Added amulet of immortality for dungeon masters.

10/01/2003
[O]- Adjusted weapon prices.
     Greatly improved polearms. Adjusted 1-h weapons slightly.

09/01/2003
[M]- Minor adjustments.

08/01/2003
[O]- Adjusted Black Market (less pots). Improved x / I display. Especially
     allows you to read very long item names in stores to see all boni.
     Tweaked overburdened-message for FA from MA.
[O]- Traps below items on the floor are now indicated at looking at them,
     in case the player already detected them before.
[O]- Adjusted items/monsters.
[D]- Limited newbie tower to 400 ft.

07/01/2003