@@ -1773,7 +1773,7 @@ player_race race_info[MAX_RACES] =
                 "Yeek",
                 {  -5, -5, -5, -5, -5, -5 },
                 0,  0,  0,  0,  0,  10,  0,  0,
-                8,  30,
+                8,  35,
                 14,  6,
                 72,  6, 180, 25,
                 66,  4, 150, 20,
